--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
   <a href="https://www.airspeedllc.com/" class="simple-text logo-mini">
     <div class="logo-img">
-      <img src="/assets/img/logo.png" />
+      <img src="assets/img/logo.png" alt="Logo" />
     </div>
   </a>
 </div>
@@ -9,23 +9,25 @@
 <div class="sidebar-wrapper">
   <ul class="nav">
     <li *ngFor="let menuItem of menuItems">
+      <!-- Mục đơn không có children -->
       <ng-container *ngIf="!menuItem.children">
         <a [routerLink]="[menuItem.path]" routerLinkActive="active">
-          <span class="nav-icon" [innerHTML]="menuItem.svg | safe: 'html'"></span>
+          <span class="nav-icon" [innerHTML]="menuItem.svg"></span>
           <span>{{menuItem.title}}</span>
         </a>
       </ng-container>
 
-      <ng-container *ngIf="menuItem.children">
+      <!-- Mục có children -->
+      <ng-container *ngIf="menuItem.children && menuItem.children.length > 0">
         <a href="#" (click)="menuItem.expanded = !menuItem.expanded; $event.preventDefault()">
-          <span class="nav-icon" [innerHTML]="menuItem.svg | safe: 'html'"></span>
+          <span class="nav-icon" [innerHTML]="menuItem.svg"></span>
           <span>{{menuItem.title}}</span>
           <i class="material-icons expand-icon">{{ menuItem.expanded ? 'expand_less' : 'expand_more' }}</i>
         </a>
         <ul class="nav sub-menu" *ngIf="menuItem.expanded">
-          <li *ngFor="let child of menuItem.children" [class]="child.class">
+          <li *ngFor="let child of menuItem.children">
             <a [routerLink]="[child.path]" routerLinkActive="active">
-              <span class="nav-icon" [innerHTML]="child.svg | safe: 'html'"></span>
+              <span class="nav-icon" [innerHTML]="child.svg || ''"></span>
               <span>{{child.title}}</span>
             </a>
           </li>
