--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
       <!-- Mục đơn không có children -->
       <ng-container *ngIf="!menuItem.children">
         <a [routerLink]="[menuItem.path]" routerLinkActive="active">
-          <span class="nav-icon" [innerHTML]="menuItem.svg"></span>
+          <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
           <span>{{menuItem.title}}</span>
         </a>
       </ng-container>
@@ -20,14 +20,16 @@
       <!-- Mục có children -->
       <ng-container *ngIf="menuItem.children && menuItem.children.length > 0">
         <a href="#" (click)="menuItem.expanded = !menuItem.expanded; $event.preventDefault()">
-          <span class="nav-icon" [innerHTML]="menuItem.svg"></span>
+          <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
           <span>{{menuItem.title}}</span>
           <i class="material-icons expand-icon">{{ menuItem.expanded ? 'expand_less' : 'expand_more' }}</i>
         </a>
         <ul class="nav sub-menu" *ngIf="menuItem.expanded">
           <li *ngFor="let child of menuItem.children">
             <a [routerLink]="[child.path]" routerLinkActive="active">
-              <span class="nav-icon" [innerHTML]="child.svg || ''"></span>
+              <!-- For child items, we can use a placeholder or specific icons if available -->
+              <span class="nav-icon" *ngIf="child.svg" [innerHTML]="child.svg | safe: 'html'"></span>
+              <span *ngIf="!child.svg" class="nav-icon-placeholder"></span> <!-- Placeholder for alignment -->
               <span>{{child.title}}</span>
             </a>
           </li>
